style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
  font-family: Poppins, sans-serif;
  font-weight: 400;
  padding: 0;
  margin: 0;
}

body {
  padding-top: 7vh;
  /* background-image: url("img/BackgroundImageWood.jpg");
  background-size: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed; */
}

/* Bakgrunnsbildet gjør at header teksten blir utydelig på grunn av at bildet har mange ulike farger og det varierer mellom hvor lyse og mørke de er. */
/* #Booking-Body {
  background-image: url("img/BackgroundServedTable.jpg");
  background-size: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
} */

/*---LIST OF SECTIONS---
NavBar
  /NavBar logo
  /NavBar list
Footer
Scrollbar
hr
Dishes
  /Menu list
Location
Booking
Contact
Report 
--------------------*/

/*--------------------
    Start of NavBar
--------------------*/
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  top: 0;
  height: 7vh;
  width: 100%;
  background-color: rgb(255, 255, 255);
  border-bottom: rgb(0, 48, 87) solid 2px;
}
/* Navbar logo (on the left side) */
#logo {
  margin-left: 17%;
}
#logo h1 {
  font-size: 1.5rem;
  font-weight: 600;
  text-decoration: none;
  color: rgb(0, 70, 150);
  padding: 5px 15px;
  margin: -1.5rem;
}
#logo h1::first-letter {
  font-size: 3rem;
  vertical-align: middle;
}
#logo a {
  display: flex;
  align-items: center;
  border: transparent solid 2px;
  transition: all 0.2s ease;
}
#logo a:visited a:active {
  color: inherit;
}
#logo a:hover {
  border: rgb(0, 48, 87) solid 2px;
  background-color: rgba(0, 0, 0, 0.1);
}
/* Navbar list (on the right side) */
.navbar ul {
  margin-right: 7%;
}
.navbar li {
  list-style: none;
  display: inline-block;
  margin-left: 2px;
}
.navbar a {
  font-size: 1rem;
  text-decoration: none;
  color: rgb(0, 70, 150);
  padding: 10px 20px;
  border: transparent solid 2px;
  transition: all 0.2s ease;
}
.navbar a:visited a:active {
  color: inherit;
}
.navbar a:hover {
  border: rgb(0, 48, 87) solid 2px;
  background-color:rgba(0, 0, 0, 0.1);
}
/*--------------------
    End of NavBar
--------------------*/

/*--------------------
    Start of Footer
--------------------*/
.Footer {
  display: flex;
  bottom: 0;
  width: 100%;
  height: 50px;
  margin-top: auto;
  background-color: rgb(255, 255, 255);
  border-top: rgb(0, 48, 87) solid 1px;
}
#Footer-Inside-Contact, 
#Footer-Inside-Location,
#Footer-Inside-Booking {
  position: fixed;
  bottom: 0;
}
.Footer-Full {
  display: flex;
  justify-content: space-between;
  width: 60%;
  margin: auto;
}
.Footer-Div {
  display: inline-flex;
  font-size: 1rem;
  color: rgb(0, 70, 150);
}
.Footer-Div a {
  font-weight: 500;
  color: rgb(0, 70, 150);
  white-space: nowrap;
}
.Footer-Div a:visited a:active {
  color: inherit;
}
.Footer-Div a:hover {
  outline: rgba(0, 70, 150, 0.5) solid 1px;
  background-color: rgba(0, 0, 0, 0.1);
}
/*--------------------
    End of Footer
--------------------*/

/*--------------------
    Start of Scrollbar
--------------------*/
::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background: rgba(0, 70, 150, 0.1);
}
::-webkit-scrollbar-thumb {
  background: rgb(0, 70, 150);
}
::-webkit-scrollbar-thumb:hover {
  background: rgba(0, 70, 150, 0.5);
  border: rgb(0, 48, 87) solid 2px;
}
/*--------------------
    End of Scrollbar
--------------------*/

/*--------------------
    Start of hr
--------------------*/
hr {
  height: 1px;
  border: none;
  background-color: rgba(0, 70, 150, 0.5);
}
#hr1 {
  margin-top: -70px;
}
/*--------------------
    End of hr
--------------------*/

/*--------------------
    Start of Dishes
--------------------*/
.Dish-Div {
  height: 93vh;
  margin-bottom: 10vh;
}
.Dish-Header {
  font-size: 2.2rem;
  font-weight: 500;
  text-align: center;
  color: rgb(0, 0, 0);
  padding-bottom: 2%;
  margin-top: 8%;
}
.Dish-Full {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 80%;
  margin: auto;
}
.Dishes-Individual {
  line-height: 2rem;
  width: 420px;
  max-width: 32%;
  min-height: 450px;
  padding: 2px;
  outline: rgba(0, 48, 87, 0.5) solid 1px;
  /* border-bottom: transparent solid 2px; */
  background-color: rgba(0, 70, 150, 0.1);
  transition: 0.2s ease-in-out;
}
/* .Dishes-Individual:hover {
  border-bottom: rgb(0, 48, 87) solid 2px;
} */
.allergies {
  font-size: 0.9rem;
}
.Dish-Full img {
  width: 100%;
}
/* Menu List below*/
.Menu-List {
  position: fixed;
  margin: 10px;
}
.Menu-List ul {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  height: 125px;
  width: 80px;
  padding: 4px;
  outline: rgba(0, 48, 87, 0.5) solid 1px;
  background-color: rgba(0, 70, 150, 0.1);
}
.Menu-List li {
  list-style: none;
}
.Move-To {
  font-size: 0.9rem;
}
.Menu-List a {
  font-size: 1rem;
  font-weight: 500;
  text-decoration: none;
  color: rgb(0, 0, 0);
  padding: 4px;
  border: transparent solid 1px;
  transition: all 0.4s;
}
.Menu-List a:hover {
  border: rgb(0, 48, 87) solid 1px;
}
/*--------------------
    End of Dishes
--------------------*/

/*--------------------
    Start of Location
--------------------*/
.Location-Header {
  font-size: 1.5rem;
  text-align: center;
  color: rgb(0, 0, 0);
  margin-top: 2%;
  margin-bottom: 1%;
}
#Location-Span1 {
  font-size: 2rem;
  font-weight: 500;
}
#Location-Span2 {
  font-size: 1.3rem;
}
.Location-Div {
  height: 520px;
  width: 1000px;
  max-width: 90%;
  margin: auto;
  margin-bottom: 4%;
  padding: 5px;
  background-color: rgba(0, 70, 150, 0.1);
  outline: rgba(0, 48, 87, 0.5) solid 1px;
}
.Location-Maps {
  border: none;
  height: 100%;
  width: 100%;
}
/*--------------------
    End of Location
--------------------*/

/*--------------------
    Start of Booking
--------------------*/
.Booking-Header1 {
  font-size: 1.8rem;
  text-align: center;
  color: rgb(0, 0, 0);
  margin-top: 2%;
}
.Booking-Header2 {
  font-size: 1.5rem;
  text-align: center;
  color: rgb(0, 0, 0);
  margin-bottom: 1%;
}
.Booking-Header2 a {
  color: rgb(0, 0, 0);
}
.Booking-Form {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  width: 550px;
  height: 600px;
  margin: auto;
  margin-bottom: 5%;
  border: rgba(29, 66, 58, 0.2) solid 1px;
  background-color: rgba(0, 70, 150, 0.1);
}
.Booking-Header3 {
  font-size: 2rem;
  color: rgb(0, 0, 0);
  margin-top: 20px;
}
.Booking-Form input, textarea {
  font-size: 1rem;
  width: 70%;
  padding: 20px;
  padding-bottom: 18px;
  background-color: white;
  outline: rgba(0, 48, 87, 0.5) solid 1px;
  border: none;
  border-bottom: transparent solid 2px;
  transition: 0.2s ease-in-out;
}
.Booking-Form input:focus, textarea:focus {
  border-bottom: rgb(0, 48, 87) solid 2px;
}
.Booking-Submit {
  text-align: center;
  width: 30%;
}
.Booking-Submit input:hover {
  border-bottom: rgb(0, 48, 87) solid 2px;
}
/*--------------------
    End of Booking
--------------------*/

/*--------------------
    Start of Contact
--------------------*/
.Contact-Form {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  align-items: center;
  width: 550px;
  height: 700px;
  margin: auto;
  margin-top: 3%;
  margin-bottom: 3%;
  border: rgba(29, 66, 58, 0.2) solid 1px;
  background-color: rgba(0, 70, 150, 0.1);
}
.Contact-Header {
  font-size: 2rem;
  margin-top: 20px;
}
.Contact-Form input, textarea {
  font-size: 1rem;
  width: 70%;
  padding: 20px;
  padding-bottom: 18px;
  background-color: white;
  outline: rgba(0, 48, 87, 0.5) solid 1px;
  border: none;
  border-bottom: transparent solid 2px;
  transition: 0.2s ease-in-out;
}
.Contact-Form input:focus, textarea:focus {
  border-bottom: rgb(0, 48, 87) solid 2px;
}
.Contact-Submit {
  text-align: center;
  width: 30%;
}
.Contact-Submit input:hover {
  border-bottom: rgb(0, 48, 87) solid 2px;
}
/*--------------------
    End of Contact
--------------------*/

/*--------------------
    Start of Report
--------------------*/
.Report-Div {
  width: 40%;
  margin: auto;
}
.Report-Div h1 {
  font-size: 2rem;
  margin: 3vh;
  text-align: center;
}
.Report-Div p {
  margin-bottom: 2vh;
}
.Report-MadeBy {
  margin: 5vh 0;
  line-height: 2rem;
}
.Report-MadeBy h2 {
  font-size: 1.1rem;
  margin-bottom: 1vh;
}
.Report-MadeBy ul {
  list-style: none;
}
.Report-MadeBy li {
  font-size: 1.1rem;
}
/*--------------------
    End of Report
--------------------*/

